# AssaultCube_proj

AC/: .clineignore  .clinerules  CMakeLists.txt  main.cpp
